--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/maven,macos,java,intellij,git,netbeans,eclipse,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=maven,macos,java,intellij,git,netbeans,eclipse,visualstudiocode
 
+.properties
+
+
 ### Eclipse ###
 .metadata
 bin/
@@ -13,7 +16,6 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-
 # External tool builders
 .externalToolBuilders/
 
